# ai4ose-lab2-2026s

./: AI4OSE-lab1.md  AI对话.md  Cargo.toml  LICENSE  README.md  a.md  plan-2.11-16.md  result-2.11-16.txt
Finish/tg-rcore-tutorial-ch8/: .gitrepo  analyze_experiment.py  batch_test.sh  test.sh
Finish/tg-rcore-tutorial-signal/: Cargo.toml
ch3/: Cargo.toml  README.md
ch3/src/: main.rs  task.rs
ch4/: Cargo.toml  README.md
ch4/src/: main.rs  process.rs
ch4/tg-kernel-vm/: Cargo.toml  README.md
ch5/: Cargo.toml  README.md
ch5/src/: main.rs  process.rs  processor.rs
ch6/src/: fs.rs  main.rs
ch6new/: Cargo.toml  README.md
ch6new/src/: main.rs
ch8/: Cargo.toml  README.md
ch8/src/: main.rs  process.rs
src/: content.md  main.rs
tg-rcore-tutorial-ch8/: Cargo.toml  FAILURE_TESTING_GUIDE.md  check_environment.ps1  run_failure_tests.bat  run_failure_tests.sh  verify_failure_tests.sh
tg-rcore-tutorial-ch8/results/: comprehensive_report_20260320_012603.txt  correctness_test_20260320_012558.txt  enhanced_failure_test_20260320_012601.txt  failure_control_tests_20260320_070041.txt  failure_test_20260320_012600.txt  failure_test_report_20260320_064547.txt  strict_failure_test_20260320_013805.txt  strict_failure_test_report.txt
tg-rcore-tutorial-ch8/src/: process.rs  (+3 more)
tg-rcore-tutorial-kernel-alloc/: Cargo.toml
tg-rcore-tutorial-sbi/: Cargo.toml
tg-rcore-tutorial-signal/: .gitrepo  Cargo.toml
tg-rcore-tutorial-signal-impl/: Cargo.toml
tg-rcore-tutorial-sync/: Cargo.toml
tg-rcore-tutorial-syscall/: Cargo.toml
tg-rcore-tutorial-user/: Cargo.toml
(+43 files in other folders)
