[package]
name = "tg-rcore-tutorial-user"
description = "User-space apps for rCore Tutorial chapters (subset for ch2)."
version = "0.4.8"
edition = "2024"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-user"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-user/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-user"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "user-apps"]
categories = ["no-std", "embedded"]

[lib]
name = "user_lib"
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tg-console = { package = "tg-rcore-tutorial-console", git = "https://github.com/musicandrap/ai4ose-lab2-2026s", version = "0.1.0-preview.1", tag = "v0.4.8" }
tg-syscall = { package = "tg-rcore-tutorial-syscall", git = "https://github.com/musicandrap/ai4ose-lab2-2026s", version = "0.1.0-preview.1", tag = "v0.4.8", features = ["user"] }
customizable-buddy = "0.0.2"
